--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -23,7 +23,7 @@
     <meta property="og:image:width" content="800" />
     <meta property="og:image:height" content="800" />
     <meta property="og:image:alt" content="iProc Cloud" />
-    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:type" content="image/jpeg" />
     <meta property="fb:app_id" content="344927490666349" />
     <meta name="twitter:card" content="summary" />
     <meta property="twitter:domain" content="iproc.id/iproc-cloud" />
@@ -1390,157 +1390,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
-        <section id="form" class="py-12 sm:py-24">
-            <div class="max-w-screen-2xl mx-auto px-8 xl:px-14!">
-                <h2 class="text-2xl sm:text-4xl! font-bold text-gray-900 mb-12 text-center">
-                    Konsultasikan kebutuhan perusahaan Anda dengan mengisi form di bawah ini. <br> Tim iProc Cloud akan
-                    segera menghubungi Anda
-                </h2>
-                <form action="https://formsubmit.co/gymnastiar32@gmail.com" method="POST" accept-charset="UTF-8">
-                    <!-- CONFIG FormSubmit -->
-                    <input type="hidden" name="_subject" value="Lead Baru dari Situs iProc/adw" />
-                    <input type="hidden" name="_template" value="table" />
-                    <!-- Biarkan captcha default aktif; jangan set _captcha=false -->
-                    <input type="text" name="_honey" style="display:none" tabindex="-1" autocomplete="off" />
-                    <input type="hidden" name="_next" value="http://127.0.0.1:5500/iproc-cloud/" />
-
-                    <div
-                        class="grid grid-cols-12 gap-4 sm:gap-8 bg-white rounded-xl shadow-md border border-gray-200 px-12 pt-8 pb-4">
-                        <div class="col-span-12 md:col-span-6">
-                            <div class="mb-4 sm:mb-8">
-                                <label for="nama_depan" class="block mb-2 font-medium text-gray-900">
-                                    Nama Depan <span class="text-red-600">*</span>
-                                </label>
-                                <input type="text" id="nama_depan" name="nama_depan" autocomplete="given-name" required
-                                    class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                                    placeholder="Nama depan Anda" />
-                            </div>
-
-                            <div class="mb-4 sm:mb-8">
-                                <label for="nama_belakang" class="block mb-2 font-medium text-gray-900">
-                                    Nama Belakang <span class="text-red-600">*</span>
-                                </label>
-                                <input type="text" id="nama_belakang" name="nama_belakang" autocomplete="family-name"
-                                    required
-                                    class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                                    placeholder="Nama belakang Anda" />
-                            </div>
-
-                            <div class="mb-4 sm:mb-8">
-                                <label for="telepon" class="block mb-2 font-medium text-gray-900">
-                                    Nomor Telepon <span class="text-red-600">*</span>
-                                </label>
-                                <input type="tel" id="telepon" name="telepon" inputmode="tel" autocomplete="tel"
-                                    required
-                                    class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                                    placeholder="Nomor telepon Anda" />
-                            </div>
-
-                            <div class="mb-4 sm:mb-8">
-                                <label for="perusahaan" class="block mb-2 font-medium text-gray-900">
-                                    Nama Perusahaan <span class="text-red-600">*</span>
-                                </label>
-                                <input type="text" id="perusahaan" name="perusahaan" autocomplete="organization"
-                                    required
-                                    class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                                    placeholder="Nama perusahaan Anda" />
-                            </div>
-                        </div>
-
-                        <div class="col-span-12 md:col-span-6">
-                            <div class="mb-4 sm:mb-8">
-                                <label for="email" class="block mb-2 font-medium text-gray-900">
-                                    Email <span class="text-red-600">*</span>
-                                </label>
-                                <input type="email" id="email" name="email" autocomplete="email" required
-                                    class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                                    placeholder="Email Anda" />
-                            </div>
-
-                            <div class="mb-4 sm:mb-8">
-                                <label for="industri" class="block mb-2 font-medium text-gray-900">
-                                    Industri <span class="text-red-600">*</span>
-                                </label>
-                                <select id="industri" name="industri" required
-                                    class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                                    <option value="">-- Pilih Industri --</option>
-                                    <option>Pertanian & Kehutanan</option>
-                                    <option>Otomotif</option>
-                                    <option>Penerbangan & Dirgantara</option>
-                                    <option>Perbankan & Jasa Keuangan</option>
-                                    <option>Kimia</option>
-                                    <option>Konstruksi & Rekayasa</option>
-                                    <option>Barang Konsumen</option>
-                                    <option>Pertahanan & Militer</option>
-                                    <option>Pendidikan & Pelatihan</option>
-                                    <option>Energi & Utilitas</option>
-                                    <option>Hiburan & Media</option>
-                                    <option>Layanan Lingkungan</option>
-                                    <option>Makanan & Minuman</option>
-                                    <option>Pemerintah & Sektor Publik</option>
-                                    <option>Kesehatan & Farmasi</option>
-                                    <option>Perhotelan & Pariwisata</option>
-                                    <option>Teknologi Informasi (TI)</option>
-                                    <option>Asuransi</option>
-                                    <option>Layanan Hukum</option>
-                                    <option>Logistik & Rantai Pasok</option>
-                                    <option>Manufaktur</option>
-                                    <option>Kelautan & Pengiriman</option>
-                                    <option>Pertambangan & Logam</option>
-                                    <option>Organisasi Nirlaba & LSM</option>
-                                    <option>Minyak & Gas</option>
-                                    <option>Jasa Profesional</option>
-                                    <option>Properti & Real Estat</option>
-                                    <option>Ritel & E-Commerce</option>
-                                    <option>Telekomunikasi</option>
-                                    <option>Transportasi</option>
-                                    <option>Tekstil & Pakaian</option>
-                                    <option>Grosir & Distribusi</option>
-                                    <option>Lainnya (Sebutkan)</option>
-                                </select>
-                            </div>
-
-                            <div class="mb-4 sm:mb-8">
-                                <label for="permintaan" class="block mb-2 font-medium text-gray-900">
-                                    Permintaan Awal <span class="text-red-600">*</span>
-                                </label>
-                                <textarea id="permintaan" name="permintaan" rows="5" required
-                                    class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                                    placeholder="Mohon jelaskan kebutuhan Anda secara rinci."></textarea>
-                            </div>
-                        </div>
-
-                        <div class="col-span-12 -mt-8">
-                            <div class="flex items-center mb-4">
-                                <input id="consent" type="checkbox" name="consent" value="agree" required
-                                    class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500">
-                                <label for="consent" class="ms-2 font-medium text-gray-900">
-                                    Saya telah membaca dan menyetujui pernyataan privasi di bawah ini.
-                                </label>
-                            </div>
-
-                            <small class="text-gray-500" style="display:block; margin-bottom:12px; line-height:1.5;">
-                                <strong>Disclaimer:</strong> iProc dan adw consulting berkomitmen untuk melindungi
-                                privasi Anda.
-                                Kami tidak akan pernah menjual, membagikan, atau mendistribusikan informasi pribadi Anda
-                                kepada pihak ketiga
-                                untuk keperluan pemasaran atau komersial. Informasi Anda hanya akan digunakan untuk
-                                berkomunikasi dengan Anda
-                                mengenai layanan kami. Jika di kemudian hari Anda ingin mencabut persetujuan tersebut,
-                                silakan kirim permintaan
-                                ke <a href="mailto:marketing@adw.co.id">marketing@adw.co.id</a>.
-                            </small>
-
-                            <button type="submit"
-                                class="text-white bg-[#005db5] hover:bg-[#02519b] focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 hover:cursor-pointer">
-                                Kirim
-                            </button>
-                        </div>
-                    </div>
-                </form>
-
             </div>
         </section>
         <section id="contact" class="bottom px-8 xl:px-14 relative overflow-hidden mb-20">
