--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -1406,7 +1406,7 @@
                     <input type="hidden" name="_template" value="table" />
                     <!-- Biarkan captcha default aktif; jangan set _captcha=false -->
                     <input type="text" name="_honey" style="display:none" tabindex="-1" autocomplete="off" />
-                    <input type="hidden" name="_next" value="http://127.0.0.1:5500/iproc-cloud/form-success/" />
+                    <input type="hidden" name="_next" value="https://iproc-2025.vercel.app/iproc-cloud/form-success/" />
 
                     <div
                         class="grid grid-cols-12 gap-4 sm:gap-8 bg-white rounded-xl shadow-md border border-gray-200 px-12 pt-8 pb-4">
