--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -1515,24 +1515,26 @@
                         </div>
 
                         <div class="col-span-12 -mt-8">
-                            <div class="flex items-center mb-4">
+                            <div class="flex items-start gap-2 mb-3">
                                 <input id="consent" type="checkbox" name="consent" value="agree" required
-                                    class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500">
-                                <label for="consent" class="ms-2 font-medium text-gray-900">
-                                    Saya telah membaca dan menyetujui pernyataan privasi di bawah ini.
+                                    class="mt-1 w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500">
+                                <label for="consent" class="font-medium text-gray-900">
+                                    Saya telah membaca dan menyetujui <button type="button" id="openConsentModal"
+                                        class="underline text-blue-700 hover:text-blue-800 focus:outline-none hover:cursor-pointer">Persetujuan
+                                        Privasi</button>.
                                 </label>
                             </div>
 
-                            <small class="text-gray-500" style="display:block; margin-bottom:12px; line-height:1.5;">
-                                <strong>Disclaimer:</strong> iProc dan adw consulting berkomitmen untuk melindungi
-                                privasi Anda.
-                                Kami tidak akan pernah menjual, membagikan, atau mendistribusikan informasi pribadi Anda
-                                kepada pihak ketiga
-                                untuk keperluan pemasaran atau komersial. Informasi Anda hanya akan digunakan untuk
-                                berkomunikasi dengan Anda
-                                mengenai layanan kami. Jika di kemudian hari Anda ingin mencabut persetujuan tersebut,
-                                silakan kirim permintaan
-                                ke <a href="mailto:marketing@adw.co.id">marketing@adw.co.id</a>.
+                            <small class="text-gray-500 block mb-4 leading-6">
+                                Ringkas: iProc, ADW Consulting, dan Pengadaan.com <strong>berkomitmen melindungi privasi
+                                    Anda</strong>.
+                                Kami <strong>tidak akan pernah</strong> menjual, membagikan, atau mendistribusikan
+                                informasi pribadi Anda kepada
+                                pihak ketiga untuk keperluan pemasaran/komersial. Informasi Anda hanya digunakan untuk
+                                komunikasi terkait layanan kami.
+                                Anda dapat mencabut persetujuan kapan saja melalui
+                                <a href="mailto:support@pengadaan.com"
+                                    class="underline text-blue-700">support@pengadaan.com</a>.
                             </small>
 
                             <button type="submit"
@@ -1540,12 +1542,112 @@
                                 Kirim
                             </button>
                         </div>
+
+                        <div id="consentModal" class="fixed inset-0 z-50 hidden items-center justify-center p-4">
+                            <div class="absolute inset-0 bg-black/50" data-close-consent></div>
+
+                            <div role="dialog" aria-modal="true" aria-labelledby="consentModalTitle"
+                                class="relative w-full max-w-2xl bg-white rounded-xl shadow-lg overflow-hidden">
+                                <div class="flex items-center justify-between px-6 py-4 border-b border-gray-300">
+                                    <h3 id="consentModalTitle" class="text-lg font-semibold text-gray-900">Persetujuan
+                                        Privasi Pengisian Formulir</h3>
+                                    <button type="button" class="p-2 rounded hover:bg-gray-100" aria-label="Tutup"
+                                        data-close-consent>
+                                        ✕
+                                    </button>
+                                </div>
+
+                                <div class="px-6 py-5 space-y-4 text-sm text-gray-700 max-h-[70vh] overflow-y-auto">
+                                    <p><strong>Ringkasan.</strong> Dengan mengirimkan formulir ini, Anda menyetujui
+                                        bahwa data diproses oleh iProc
+                                        (PT Anggada Duta Wisesa/“ADW Consulting”) dan Pengadaan.com menggunakan layanan
+                                        pihak ketiga FormSubmit
+                                        (formsubmit.co) untuk meneruskan pesan Anda ke email kami dan, bila diperlukan,
+                                        menyimpan arsip sementara.</p>
+
+                                    <div>
+                                        <h4 class="font-semibold text-gray-900 mb-1">1) Data yang Dikumpulkan</h4>
+                                        <ul class="list-disc ms-5 space-y-1">
+                                            <li>Data yang Anda isi (nama, email, telepon, perusahaan, pesan/subjek,
+                                                dll.).</li>
+                                            <li>Metadata teknis (waktu kirim, alamat IP, user-agent) dari penyedia.</li>
+                                        </ul>
+                                    </div>
+
+                                    <div>
+                                        <h4 class="font-semibold text-gray-900 mb-1">2) Tujuan Pemrosesan</h4>
+                                        <ul class="list-disc ms-5 space-y-1">
+                                            <li>Menjawab pertanyaan/permintaan, memberikan layanan/penawaran, dan tindak
+                                                lanjut.</li>
+                                            <li>Pencatatan korespondensi dan peningkatan kualitas layanan.</li>
+                                        </ul>
+                                    </div>
+
+                                    <div>
+                                        <h4 class="font-semibold text-gray-900 mb-1">3) Dasar Hukum</h4>
+                                        <p>Persetujuan Anda saat mencentang kotak persetujuan dan menekan tombol kirim.
+                                        </p>
+                                    </div>
+
+                                    <div>
+                                        <h4 class="font-semibold text-gray-900 mb-1">4) Pihak Ketiga</h4>
+                                        <p>FormSubmit meneruskan data ke email kami dan dapat menyimpan arsip sementara
+                                            (untuk operasional/anti-spam).
+                                            Jika formulir memakai Google reCAPTCHA, Google dapat melakukan pengukuran
+                                            proteksi spam sesuai kebijakan mereka.</p>
+                                    </div>
+
+                                    <div>
+                                        <h4 class="font-semibold text-gray-900 mb-1">5) Retensi & Keamanan</h4>
+                                        <ul class="list-disc ms-5 space-y-1">
+                                            <li>Arsip sementara di FormSubmit disimpan terbatas waktunya (umumnya hingga
+                                                ~30 hari) lalu dihapus.</li>
+                                            <li>Pengiriman melalui HTTPS; kami menerapkan kontrol keamanan yang wajar
+                                                (tidak ada metode 100% aman).</li>
+                                        </ul>
+                                    </div>
+
+                                    <div>
+                                        <h4 class="font-semibold text-gray-900 mb-1">6) Komitmen Privasi</h4>
+                                        <p><strong>iProc, ADW Consulting, dan Pengadaan.com berkomitmen untuk melindungi
+                                                privasi Anda.</strong>
+                                            Kami tidak akan pernah menjual, membagikan, atau mendistribusikan informasi
+                                            pribadi Anda kepada pihak ketiga
+                                            untuk keperluan pemasaran atau komersial. Informasi Anda hanya akan
+                                            digunakan untuk berkomunikasi dengan Anda
+                                            mengenai layanan kami. Jika di kemudian hari Anda ingin mencabut persetujuan
+                                            tersebut, silakan kirim permintaan ke
+                                            <a href="mailto:support@pengadaan.com"
+                                                class="underline text-blue-700">support@pengadaan.com</a>.
+                                        </p>
+                                    </div>
+
+                                    <div>
+                                        <h4 class="font-semibold text-gray-900 mb-1">7) Hak Anda & Kontak</h4>
+                                        <ul class="list-disc ms-5 space-y-1">
+                                            <li>Meminta akses, perbaikan, pembatasan, atau penghapusan data yang Anda
+                                                kirimkan.</li>
+                                            <li>Menarik kembali persetujuan kapan saja melalui
+                                                <a href="mailto:support@pengadaan.com"
+                                                    class="underline text-blue-700">support@pengadaan.com</a>.
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+
+                                <div class="px-6 py-4 border-t border-gray-300 flex items-center justify-end gap-2">
+                                    <button type="button" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 hover:cursor-pointer focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 "
+                                        data-close-consent>Tutup</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </form>
 
             </div>
         </section>
-        <section id="contact" class="bottom px-8 xl:px-14 relative overflow-hidden mb-20 bg-gradient-to-t from-white/20 to-sky-400/20 bg-white">
+        <section id="contact"
+            class="bottom px-8 xl:px-14 relative overflow-hidden mb-20 bg-gradient-to-t from-white/20 to-sky-400/20 bg-white">
             <div class="max-w-screen-2xl mx-auto text-center p-10 sm:p-15 rounded-4xl">
                 <p
                     class="text-xl md:text-2xl! lg:text-5xl! font-extrabold mx-auto text-white leading-tight mb-8 w-full sm:max-w-2/3">
@@ -1711,6 +1813,40 @@
             }, 100);
         });
 
+    </script>
+
+    <script>
+        (function () {
+            const modal = document.getElementById('consentModal');
+            const openBtn = document.getElementById('openConsentModal');
+            const closeEls = modal.querySelectorAll('[data-close-consent], .absolute.inset-0');
+
+            let lastFocus;
+
+            function openModal() {
+                lastFocus = document.activeElement;
+                modal.classList.remove('hidden');
+                modal.classList.add('flex');
+                // fokus ke judul modal
+                const title = document.getElementById('consentModalTitle');
+                if (title) title.focus({ preventScroll: true });
+                document.addEventListener('keydown', onEsc);
+            }
+
+            function closeModal() {
+                modal.classList.add('hidden');
+                modal.classList.remove('flex');
+                document.removeEventListener('keydown', onEsc);
+                if (lastFocus) lastFocus.focus();
+            }
+
+            function onEsc(e) {
+                if (e.key === 'Escape') closeModal();
+            }
+
+            openBtn.addEventListener('click', openModal);
+            closeEls.forEach(el => el.addEventListener('click', closeModal));
+        })();
     </script>
 
 </body>
