--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -1400,7 +1400,7 @@
                     Konsultasikan kebutuhan perusahaan Anda dengan mengisi form di bawah ini. <br> Tim iProc Cloud akan
                     segera menghubungi Anda
                 </h2>
-                <form action="https://formsubmit.co/gymnastiar32@gmail.com" method="POST" accept-charset="UTF-8">
+                <form action="https://formsubmit.co/rani@adw.co.id" method="POST" accept-charset="UTF-8">
                     <!-- CONFIG FormSubmit -->
                     <input type="hidden" name="_subject" value="Lead Baru dari Situs iProc/adw" />
                     <input type="hidden" name="_template" value="table" />
@@ -1636,7 +1636,8 @@
                                 </div>
 
                                 <div class="px-6 py-4 border-t border-gray-300 flex items-center justify-end gap-2">
-                                    <button type="button" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 hover:cursor-pointer focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 "
+                                    <button type="button"
+                                        class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 hover:cursor-pointer focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 "
                                         data-close-consent>Tutup</button>
                                 </div>
                             </div>
