--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -1400,7 +1400,7 @@
                     Konsultasikan kebutuhan perusahaan Anda dengan mengisi form di bawah ini. <br> Tim iProc Cloud akan
                     segera menghubungi Anda
                 </h2>
-                <form action="https://formsubmit.co/rani@adw.co.id" method="POST" accept-charset="UTF-8">
+                <form action="https://formsubmit.co/gymnastiar32@gmail.com" method="POST" accept-charset="UTF-8">
                     <!-- CONFIG FormSubmit -->
                     <input type="hidden" name="_subject" value="Lead Baru dari Situs iProc/adw" />
                     <input type="hidden" name="_template" value="table" />
