--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -1956,6 +1956,7 @@
 
             if (alreadySeen) {
                 // Tampilkan setelah load (bisa diberi delay kecil jika mau)
+                console.log("Show")
                 showPopup();
                 // tandai sudah pernah tampil
                 localStorage.setItem(STORAGE_KEY, '1');
