--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -1953,6 +1953,7 @@
             const alreadySeen = localStorage.getItem(STORAGE_KEY) === '1';
             // NOTE: kalau ingin "sekali per sesi browser", gunakan:
             // const alreadySeen = sessionStorage.getItem(STORAGE_KEY) === '1';
+            console.log(alreadySeen)
 
             if (alreadySeen) {
                 // Tampilkan setelah load (bisa diberi delay kecil jika mau)
