--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -1955,7 +1955,7 @@
             // const alreadySeen = sessionStorage.getItem(STORAGE_KEY) === '1';
             console.log(alreadySeen)
 
-            if (alreadySeen) {
+            if (!alreadySeen) {
                 // Tampilkan setelah load (bisa diberi delay kecil jika mau)
                 console.log(alreadySeen)
                 console.log("Show")
